discussion/kv_engine/177009/177009_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Rename writeDocument to upsert

And let it be a member function to the MeteringTest class to avoid
the need of passing the connection.

Change-Id: Ice8415efd3c911a8ededa55eaa78ff51a6e6a598

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-04 04:12:51.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-04 05:09:51.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47337/ : FAILURE

Failure of GoogleTest "WarmupDiskTest.noDataFileCollectionCountsTest":

<pre>
[ RUN      ] WarmupDiskTest.noDataFileCollectionCountsTest
unknown file: error: C++ exception with description "remove: Incorrect function.: "C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db/test.290601\0.couch.1"" thrown in the test body.
[  FAILED  ] WarmupDiskTest.noDataFileCollectionCountsTest (50 ms)
WarmupDiskTest.noDataFileCollectionCountsTest
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47337/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18577/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:261:30: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                        std::this_thread::sleep_for(
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18577/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:261:30:
error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18577/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17728/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39789/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8248/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8347/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20809/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20461/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28842/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19684/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21451/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
